[workspace]

members = [
  "crates/hc-utils",
]

[profile.dev]
opt-level = "s"

[profile.release]
opt-level = "s"

[patch.crates-io]
hdk       = { git = "https://github.com/pjkundert/holochain", branch = "feature-create-timestamp", package = "hdk" }
holo_hash = { git = "https://github.com/pjkundert/holochain", branch = "feature-create-timestamp", package = "holo_hash" }
#hdk       = {path = "../holochain/crates/hdk"}
#holo_hash = {path = "../holochain/crates/holo_hash"}
