[package]
name = "hc_utils"
version = "0.3.0"
authors = ["zo-el <joel.ulahanna@holo.host>"]
edition = "2018"

[dependencies]
hdk = "0.0.101-alpha.0"
holo_hash = "0.0.2-alpha.1"

serde = "1.0"
thiserror = "1.0"

[lib]
name = "hc_utils"
path = "src/lib.rs"
# "cargo test --doc" doctests are not performed with the "cdylib" crate-type
crate-type = ["cdylib", "rlib"]
